@startuml 
title StrategyClassDiagram
skinparam shadowing false

class Strategy {
  + operator()() = 0
}

class Strategy1 {
  + operator()()
}

class Strategy2 {
  + operator()()
}

class Strategy3 {
  + operator()()
}

class Context {
  - std::unique_ptr<Strategy> strat_
  + Context()
  + setStrategy(std::unique_ptr<Strategy strat)
  + strategy()
}

Context o--> Strategy
Strategy <|-- Strategy1
Strategy <|-- Strategy2
Strategy <|-- Strategy3

@enduml